--- a/gl_server/Makefile
+++ b/gl_server/Makefile
@@ -4,7 +4,7 @@ LIBS=-L/opt/vc/lib/ -lGLESv2 -lEGL -lopenmaxil -lbcm_host -lvcos -lvchiq_arm -lp
 INCLUDES=-I/opt/vc/include/ -I/opt/vc/include/interface/vcos/pthreads -I/opt/vc/include/interface/vmcs_host/linux
 OBJS=fifo.o glcontrol.o server.o glserver.o
 
-all: main
+all: gl_server
 
 fifo.o: fifo.c fifo.h
 	gcc -c -o fifo.o $(CFLAGS) fifo.c
@@ -18,8 +18,8 @@ server.o: server.c server.h fifo.o
 glserver.o: glserver.c glserver.h gls_command.h glcontrol.o server.o
 	gcc -c -o glserver.o $(CFLAGS) $(INCLUDES) glserver.c
 
-main: main.c glserver.o
-	gcc -o main $(CFLAGS) $(INCLUDES) $(LIBS) main.c $(OBJS)
+gl_server: main.c glserver.o
+	gcc -o gl_server $(CFLAGS) $(INCLUDES) $(LIBS) main.c $(OBJS)
 
 clean:
-	rm main $(OBJS)
+	rm gl_server $(OBJS)
