--- a/gl_client/Makefile
+++ b/gl_client/Makefile
@@ -1,9 +1,10 @@
 CFLAGS=-O3 -Wall
 
 LIBS=-lpthread -lm
-OBJS=fifo.o server.o glclient.o
+OBJS=fifo.o server.o glclient.o glsutil.o
+EXES=sample1 sample2
 
-all: gl_client
+all: $(EXES)
 
 fifo.o: fifo.c fifo.h
 	gcc -c -o fifo.o $(CFLAGS) fifo.c
@@ -14,8 +15,14 @@ server.o: server.c server.h fifo.o
 glclient.o: glclient.c glclient.h gls_command.h server.o
 	gcc -c -o glclient.o $(CFLAGS) glclient.c
 
-gl_client: main.c glclient.o
-	gcc -o gl_client $(CFLAGS) $(LIBS) main.c $(OBJS)
+glsutil.o: glsutil.c glsutil.h
+	gcc -c -o glsutil.o $(CFLAGS) glsutil.c
+
+sample1: sample1.c glclient.o glsutil.o
+	gcc -o sample1 $(CFLAGS) sample1.c $(OBJS) $(LIBS)
+
+sample2: sample2.c glclient.o glsutil.o
+	gcc -o sample2 $(CFLAGS) sample2.c $(OBJS) $(LIBS)
 
 clean:
-	rm gl_client $(OBJS)
+	rm $(EXES) $(OBJS)
