--- a/android_gl_server/AndroidManifest.xml
+++ b/android_gl_server/AndroidManifest.xml
@@ -5,6 +5,8 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="21" android:targetSdkVersion="25"/>
 	<uses-feature android:glEsVersion="0x00020000"/>
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+	<uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
 	<uses-permission android:name="android.permission.INTERNET"/>
 	
     <application android:label="@string/app_name"
