--- a/android_gl_server/AndroidManifest.xml
+++ b/android_gl_server/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <application android:label="@string/app_name"
                  android:debuggable="true">
         <activity android:name=".GLStreamingActivity"
-                  android:label="@string/app_name">
+			android:label="@string/app_name"
+			android:configChanges="keyboardHidden|orientation|screenSize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
